<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/charcoal_grey"
    android:gravity="center_horizontal"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="64dp"
    android:paddingBottom="24dp"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipsy"
        android:textColor="@color/reddish_pink"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_bill_amount"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/medium_grey"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_tip_amount"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/minus"
            android:textSize="24sp"
            android:backgroundTint="@color/mint_green"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginHorizontal="32dp"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/plus"
            android:textSize="24sp"
            android:backgroundTint="@color/mint_green"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00_kr"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/reddish_pink"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00_kr"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill"
                android:textColor="@color/reddish_pink"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00_kr"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:textColor="@color/reddish_pink"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>